<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    tools:context=".MainActivity" 
    android:background="#540115">
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingTop="20dp"
        android:textColor="@color/titlecolor"
        android:text="@string/title"/>
    
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="7dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_warchant"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/warchant" >
            </Button>

    </LinearLayout>
    
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_fightson"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/fight" >
            </Button>

    </LinearLayout>
    
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_victorysong"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/victory" >
            </Button>

    </LinearLayout>
    
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_garnetgold"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/colors" >
            </Button>

    </LinearLayout>
    
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_fsucheer"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/cheer" >
            </Button>

    </LinearLayout>
    
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_4thfan"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/fanfare" >
            </Button>

    </LinearLayout>
    
        
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_uprising"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/uprising" >
            </Button>

    </LinearLayout>
    
        
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:gravity="center">
    
            <Button
            android:id="@+id/button_stop"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="45dp"
            android:layout_width="300dp"
            android:text="@string/stop" >
            </Button>

    </LinearLayout>

</LinearLayout>
